--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,7 +127,7 @@
     <string name="str_kon1">Amri Marihot Jati</string>
     <string name="str_univ1">STIE Indonesia Banking School</string>
     <string name="str_portofolio1">\@Radesca</string>
-    <string name="str_portofoliourl1">https://github.com/rsp23/string>
+    <string name="str_portofoliourl1">https://github.com/rsp23</string>
     <string name="str_kon2">Evandro Malsi</string>
     <string name="str_univ2">Mercu Buana</string>
     <string name="str_portofolio2">\@evandromalsi</string>
