--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,8 +123,8 @@
     <string name="str_about">About</string>
     <string name="str_kontributor">Kontributor:</string>
     <string name="str_mitra">Kampus Merdeka Hacktiv8</string>
-    <string name="str_team_member_2">Team Member 2</string>
-    <string name="str_kon1">Amri Marihot Jati</string>
+    <string name="str_team_member_4">Team Member 4</string>
+    <string name="str_kon1">Radesca</string>
     <string name="str_univ1">STIE Indonesia Banking School</string>
     <string name="str_portofolio1">\@Radesca</string>
     <string name="str_portofoliourl1">https://github.com/rsp23</string>
